# syndicatfx-gfx

./: LICENSE.md  Makefile.am  README.md  configure.ac  filelist-mspr-0.txt  sprites-fontb0-2.am  sprites-fontb1-2.am
.github/workflows/: build.yaml
font_bulky_corpo-12-white/: filelist-fontb1-2.txt
font_bulky_corpo-5-ulgreen/: filelist-mfnt-0.txt
